2013-09-29  Brian Tiffin & Simon  Sobisch

	* Change package name, and project to GNU Cobol

2012-09-05  Simon 'sf-mensch/human' Sobisch

	* Change package name to OpenCOBOL CE

2011-??-??  Roger While <simrw@sim-basis.de>

	* General : Affects most directories - Let make check
	  skip ISAM tests if not configured with ISAM

20??-??-??  Roger While <simrw@sim-basis.de>

	* configure.ac : Added check for using GMP library

2008-11-17  Roger While <simrw@sim-basis.de>

	* configure.ac : Correct sed usage

2008-11-15  Roger While <simrw@sim-basis.de>

	* configure.ac : Remove lfs64 option, reinstate --enable-debug

2008-11-01  Roger While <simrw@sim-basis.de>

	* configure.ac : nanosleep on Solaris needs extra libs

2008-09-29  Roger While <simrw@sim-basis.de>

	* Makefile.am : Revise format of tarstamp.h

2008-08-20  Roger While <simrw@sim-basis.de>

	* configure.ac : Option changes for AIX

2008-08-16  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix AIX xlc

2008-08-08  Roger While <simrw@sim-basis.de>

	* configure.ac : Take out --enable-debug
	* Makefile.am : Force permissions when making dist

2008-07-05  Roger While <simrw@sim-basis.de>

	* configure.ac : No need to check for regex or mvgetnstr

2008-04-16  Roger While <simrw@sim-basis.de>

	* configure.ac : Add in "copy" directory for OC supplied COPY elements

2008-01-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix invalid usage of square brackets

2007-12-29  Roger While <simrw@sim-basis.de>

	* Bump version to 1.1

2007-12-27  Roger While <simrw@sim-basis.de>

	* Release 1.0

2007-12-21  Roger While <simrw@sim-basis.de>

	* configure.ac : Change order of checking various things

2007-12-18  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix WITH_VARSEQ setting

2007-12-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Add checks for headers/libraries when using
			 CISAM/DISAM/VBISAM

2007-11-21  Roger While <simrw@sim-basis.de>
